# hesha

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  WHITEPAPER.md  test-summary.md
.github/workflows/: rust.yml
cli/hesha-cli/: Cargo.toml
cli/hesha-cli/src/: config.rs  main.rs  output.rs
cli/hesha-cli/src/commands/: attest.rs  info.rs  inspect.rs  keygen.rs  mod.rs  setup_issuer.rs  start.rs  stop.rs  verify.rs
crates/hesha-client/: Cargo.toml
crates/hesha-client/src/: error.rs  issuer.rs  lib.rs
crates/hesha-core/: Cargo.toml
crates/hesha-core/examples/: full_protocol_demo.rs
crates/hesha-core/src/: issuer_setup.rs  lib.rs
crates/hesha-core/src/attestation/: claims.rs  create.rs  jwt.rs  mod.rs  parse.rs
crates/hesha-core/src/generator/: algorithm.rs  global.rs  local.rs  mod.rs
crates/hesha-core/src/verification/: discovery.rs  mod.rs  verify.rs
crates/hesha-crypto/: Cargo.toml
crates/hesha-crypto/src/: hashing.rs  lib.rs  nonce.rs  signing.rs
crates/hesha-types/: Cargo.toml
crates/hesha-types/proptest-regressions/: tests.txt
crates/hesha-types/src/: attestation.rs  crypto.rs  error.rs  issuer_config.rs  lib.rs  phone.rs  tests.rs
docs/: README.md  _config.yml  documentation.html  hesha-issuer-node-specification.md  hesha-protocol-explained.md  hesha-protocol-specification.md  hesha-wallet-specification.md  index.html  issuer-demo-copy.md  issuer-demo-prd.md  sequence-diagrams.md  test-locally.sh  use-cases-and-examples.md  visual-flow-diagrams.md  whitepaper.md
docs/assets/css/: style.css
nodes/issuer-node/: Cargo.toml  README.md
nodes/issuer-node/config/: simple-example.toml  subdomain-example.toml
nodes/issuer-node/src/: config.rs  config_loader.rs  main.rs  state.rs
nodes/issuer-node/src/api/: attest.rs  attest_simple.rs  mod.rs  pubkey.rs
scripts/: install.sh
tests/: lib.rs
tests/integration/: cli_test.rs  full_flow_test.rs  mod.rs
