[workspace]
resolver = "2"
members = [
    "crates/hesha-types",
    "crates/hesha-crypto",
    "crates/hesha-core",
    "crates/hesha-client",
    "nodes/issuer-node",
    "cli/hesha-cli",
]


[workspace.package]
version = "0.1.0"
authors = ["Hasha Protocol Contributors"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hesha-protocol/hesha"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"

# JWT
jsonwebtoken = "9.2"

# Configuration
toml = "0.8"

# HTTP
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
