[package]
name = "hesha-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for the Hesha Protocol"

[dependencies]
hesha-types = { path = "../hesha-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"