[package]
name = "hesha-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic operations for the Hesha Protocol"

[dependencies]
hesha-types = { path = "../hesha-types" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }