[package]
name = "hesha-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for the Hesha Protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }